# HyperSonus

./: .gitignore  LICENSE  README.md  gradlew_final_log.txt  gradlew_test.txt  run.bat
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/build_test/: CMakeCache.txt
app/src/main/java/com/example/first/: AudioPathwayActivity.kt  MusicService.kt  PlayerActivity.kt  SettingsActivity.kt  UsbHelper.kt
app/src/main/java/com/example/first/engine/: AudioEngineFactory.kt  DeviceHelper.kt  IAudioEngine.kt  MediaPlayerEngine.kt  NativeHiResEngine.kt  UsbBulkEngine.kt
app/src/main/java/com/example/first/usb/: NativeHiResEngineUsbBridge.kt  UsbAttachReceiver.kt  UsbBulkStreamer.kt  UsbDescriptorParser.kt  UsbVolumeControl.kt
app/src/main/res/layout/: activity_audio_pathway.xml  activity_settings.xml  item_pathway_stage.xml
app/src/main/res/values/: strings.xml
